# inventory-management-system-api

./: .env.example  .gitignore  .pylintrc  Dockerfile  Dockerfile.prod  LICENSE  README.md  codecov.yml  docker-compose.yml  mongodb_entrypoint.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/scripts/: start-mongodb.sh
.github/workflows/: .ci.yml  release-build.yml
data/: catalogue_item_property_templates.json  mock_data.dump  units.json  usage_statuses.json
inventory_management_system_api/: .env.example  logging.example.ini  main.py
inventory_management_system_api/auth/: authorisation.py  jwt_bearer.py
inventory_management_system_api/cli/: add.py  configure.py  core.py  create.py  delete.py  main.py  migrate.py  update.py
inventory_management_system_api/core/: breadcrumbs.py  config.py  consts.py  custom_object_id.py  database.py  exceptions.py  object_storage_api_client.py
inventory_management_system_api/migrations/: base.py  core.py  migration.py  script.py
inventory_management_system_api/migrations/scripts/: 20241016101400_expected_lifetime_migration.py  20241125102300_number_of_spares_migration.py  20241126124931_test_migration.py  20250703083422_system_types_migration.py  20260123091715_fix_incorrect_property_ids.py  20260203162814_drawing_number_and_drawing_link_migration.py  20260204171839_equation_related_fields.py  20260216113524_modified_comments_migration.py  20260325102658_modified_by_field.py  _example_migration.py  add_property_ids.py  add_unit_ids.py  add_usage_status_ids.py  example_migration.py  expected_lifetime_migration.py  number_of_spares_migration.py  rename_catalogue_item_properties.py
inventory_management_system_api/models/: catalogue_category.py  catalogue_item.py  catalogue_item_property_template.py  custom_object_id_data_types.py  item.py  manufacturer.py  mixins.py  rule.py  setting.py  settings.py  system.py  system_type.py  unit.py  units.py  usage_status.py
inventory_management_system_api/repositories/: catalogue_category.py  catalogue_item.py  catalogue_item_property_template.py  item.py  manufacturer.py  rule.py  setting.py  settings.py  system.py  system_type.py  unit.py  usage_status.py  utils.py
inventory_management_system_api/routers/v1/: catalogue_category.py  catalogue_item.py  catalogue_item_property_template.py  item.py  manufacturer.py  rule.py  setting.py  settings.py  system.py  system_type.py  unit.py  usage_status.py
inventory_management_system_api/schemas/: breadcrumbs.py  catalogue_category.py  catalogue_item.py  catalogue_item_property_template.py  item.py  manufacturer.py  mixins.py  rule.py  setting.py  settings.py  system.py  system_type.py  unit.py  usage_status.py  validation.py
inventory_management_system_api/services/: catalogue_category.py  catalogue_category_property.py  catalogue_item.py  catalogue_item_property_template.py  item.py  manufacturer.py  rule.py  setting.py  settings.py  system.py  system_type.py  unit.py  usage_status.py  utils.py
scripts/: dev_cli.py  generate_mock_data.py  mongodb_entrypoint.sh  setup.mongodb
test/: conftest.py  mock_data.py  pytest.ini
test/e2e/: conftest.py  mock_schemas.py  test_catalogue_category.py  test_catalogue_category_property.py  test_catalogue_item.py  test_catalogue_item_property_template.py  test_item.py  test_jwt_bearer.py  test_manufacturer.py  test_rules.py  test_setting.py  test_system.py  test_system_type.py  test_unit.py  test_usage_status.py
test/unit/: mock_data.py
test/unit/auth/: test_authorisation.py  test_jwt_bearer.py
test/unit/core/: test_breacrumbs.py  test_custom_objectid.py  test_database.py  test_object_storage_api_client.py
test/unit/migrations/: test_core.py
test/unit/repositories/: conftest.py  mock_models.py  test_catalogue_category.py  test_catalogue_item.py  test_catalogue_item_property_template.py  test_item.py  test_manufacturer.py  test_rule.py  test_setting.py  test_system.py  test_system_type.py  test_unit.py  test_usage_status.py  test_utils.py
test/unit/services/: conftest.py  test_catalogue_category.py  test_catalogue_category_property.py  test_catalogue_item.py  test_catalogue_item_property_template.py  test_item.py  test_manufacturer.py  test_rule.py  test_setting.py  test_system.py  test_system_type.py  test_unit.py  test_usage_status.py  test_utils.py
